[package]
name = "smartpool"
version = "0.1.0"
authors = ["Phoenix <kahlo.phoenix@gmail.com>"]

[dependencies]
futures = "0.1.24"
atom = "0.3.5"
atomicmonitor = "0.1.1"
monitor = "0.1.0"
time = "0.1"
smallqueue = { path = "../smallqueue" }
atomic = "0.4.1"
log = "0.4.6"

[dev-dependencies]
rand = "0.5.5"
stopwatch = "0.0.7"
pretty_env_logger = "0.2.5"

