[package]
name = "smartpool"
version = "0.1.0"
authors = ["Phoenix <kahlo.phoenix@gmail.com>"]
description = "A very customizable, future-aware threadpool."
readme = "README.md"
repository = "https://github.com/gretchenfrage/smartpool"
categories = ["concurrency"]
license = "MIT"

[dependencies]
futures = "0.1.24"
atom = "0.3.5"
atomicmonitor = "0.1.2"
monitor = "0.1.0"
time = "0.1"
smallqueue = "0.1.0"
atomic = "0.4.1"
log = "0.4.6"
stopwatch = "0.0.7"

[dev-dependencies]
rand = "0.5.5"
pretty_env_logger = "0.2.5"

